remove redundant update pin dto